syntax = "proto3";

package api.admin.authorization;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "admin/model.proto";
import "enum.proto";

option go_package = "github.com/aide-family/moon/api/admin/authorization;authorization";
option java_multiple_files = true;
option java_package = "api.admin.authorization";

// 认证模块
service Authorization {
  // 登录
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/v1/authorization/login"
      body: "*"
    };
  }

  // 登出
  rpc Logout (LogoutRequest) returns (LogoutReply) {
    option (google.api.http) = {
      post: "/v1/authorization/logout"
      body: "*"
    };
  }

  // 刷新token
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenReply) {
    option (google.api.http) = {
      post: "/v1/authorization/refresh"
      body: "*"
    };
  }

  // 获取验证码
  rpc Captcha (CaptchaReq) returns (CaptchaReply) {
    option (google.api.http) = {
      post: "/v1/authorization/captcha"
      body: "*"
    };
  }

  // 设置账号邮箱
  rpc SetEmailWithLogin (SetEmailWithLoginRequest) returns (SetEmailWithLoginReply) {
    option (google.api.http) = {
      post: "/v1/authorization/set_email"
      body: "*"
    };
  }

  // 验证邮箱
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailReply) {
    option (google.api.http) = {
      post: "/v1/authorization/verify_email"
      body: "*"
    };
  }

  // 邮箱注册
  rpc RegisterWithEmail (RegisterWithEmailRequest) returns (RegisterWithEmailReply) {
    option (google.api.http) = {
      post: "/v1/authorization/register_with_email"
      body: "*"
    };
  }

  // 展示oauth列表
  rpc ListOauth (ListOauthRequest) returns (ListOauthReply) {
    option (google.api.http) = {
      get: "/v1/authorization/oauth"
    };
  }

  // 校验用户在当前资源下是否有权限
  rpc CheckPermission (CheckPermissionRequest) returns (CheckPermissionReply);

  // 校验token是否登录中的状态
  rpc CheckToken (CheckTokenRequest) returns (CheckTokenReply);
}

message LoginRequest {
  // 用户名
  string username = 1 [(buf.validate.field).cel = {
    message: "用户名不能为空",
    expression: "this.size() != 0"
  }];
  // 密码
  string password = 2 [(buf.validate.field).cel = {
    message: "密码不能为空",
    expression: "this.size() != 0"
  }];
  // 验证码
  AuthCaptcha captcha = 3 [(buf.validate.field).required = true];
  // 重定向地址
  string redirect = 4;
  // 团队ID
  uint32 teamID = 5;
}
message LoginReply {
  // 用户信息
  UserItem user = 1;
  // token
  string token = 2;
  // 重定向地址
  string redirect = 3;
}

message LogoutRequest {}
message LogoutReply {
  // 重定向地址
  string redirect = 1;
}

message RefreshTokenRequest {
  // 团队ID
  uint32 teamID = 1;
}
message RefreshTokenReply {
  // token
  string token = 1;
  // 用户信息
  UserItem user = 2;
  // 团队ID
  uint32 teamID = 5;
}

// 登录验证码
message AuthCaptcha {
  // 验证码
  string code = 1 [(buf.validate.field).cel = {
    expression: "this.size() != 0",
    message: "验证码不能为空"
  }];
  // ID
  string id = 2 [(buf.validate.field).cel = {
    expression: "this.size() != 0",
    message: "验证码唯一标识ID不能为空"
  }];
}

// 验证码
message CaptchaReq {
  // 验证码类型, 0 图片验证码, 1 音频验证码
  CaptchaType captchaType = 1;
  // 主题
  string theme = 2 [(buf.validate.field).cel = {
    id: "CaptchaReq_theme_type"
    message: "必须为light或者dark",
    expression: "this.size() == 0 || this == 'light' || this == 'dark'"
  }];
  // 图片类型宽高， 不传为默认值
  int32 width = 3;
  int32 height = 4;
}
message CaptchaReply {
  // 验证码base64信息, 如果是图片验证码, 则直接使用img标签展示即可, 如果是音频验证码, 则需要调用相关接口播放音频
  string captcha = 1;
  // 验证码类型, 0 图片验证码, 1 音频验证码
  CaptchaType captchaType = 2;
  // 验证码标识
  string id = 3;
}

message CheckPermissionRequest {
  // 资源
  string operation = 1 [(buf.validate.field).cel = {
    message: "必须选择资源",
    expression: "this.size() != 0"
  }];
}
message CheckPermissionReply {
  bool hasPermission = 1;
}

message CheckTokenRequest {}
message CheckTokenReply {
  bool isLogin = 1;
  UserItem user = 2;
}

message SetEmailWithLoginRequest {
  uint32 oauthID = 1 [(buf.validate.field).cel = {
    message: "必须选择第三方登录",
    expression: "this > 0"
  }];
  string email = 2 [(buf.validate.field).cel = {
    message: "必须输入邮箱",
    expression: "this.size() > 0"
  }, (buf.validate.field).cel = {
    message: "必须为有效的电子邮件地址",
    expression: "this.isEmail()"
  }];
  string code = 3 [(buf.validate.field).cel = {
    message: "必须输入验证码",
    expression: "this.size() > 0"
  }];
  string token = 4 [(buf.validate.field).cel = {
    message: "非法请求",
    expression: "this.size() > 0"
  }];
}
message SetEmailWithLoginReply {
  UserItem user = 1;
  string token = 2;
}

message VerifyEmailRequest {
  string email = 1 [(buf.validate.field).cel = {
    message: "必须输入邮箱",
    expression: "this.size() > 0"
  }, (buf.validate.field).cel = {
    message: "必须为有效的电子邮件地址",
    expression: "this.isEmail()"
  }];
  // 图形验证码
  AuthCaptcha captcha = 2 [(buf.validate.field).required = true];
}
message VerifyEmailReply {}

message RegisterWithEmailRequest {
  string username = 1 [(buf.validate.field).cel = {
    message: "必须输入用户名",
    expression: "this.size() > 0"
  }];
  string email = 2 [(buf.validate.field).cel = {
    message: "必须输入邮箱",
    expression: "this.size() > 0"
  }, (buf.validate.field).cel = {
    message: "必须为有效的电子邮件地址",
    expression: "this.isEmail()"
  }];
  string password = 3 [(buf.validate.field).cel = {
    message: "必须输入密码",
    expression: "this.size() > 0"
  }];
  string code = 4 [(buf.validate.field).cel = {
    message: "必须输入验证码",
    expression: "this.size() > 0"
  }];
}
message RegisterWithEmailReply {
  UserItem user = 1;
  string token = 2;
}

// 展示oauth列表
message ListOauthRequest {}
// 展示oauth列表回复
message ListOauthReply {
  // oauth列表
  repeated OauthItem list = 1;
}

message OauthItem {
  // 图标
  string icon = 1;
  // 标签
  string label = 2;
  // 重定向地址
  string redirect = 3;
}
