syntax = "proto3";

package moon.cmd.server.demo.internal.democonf;

import "google/protobuf/duration.proto";
import "conf/conf.proto";

option go_package = "github.com/aide-family/moon/cmd/server/demo/internal/democonf;democonf";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  string env = 3;
  pkg.conf.Log log = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }

  message JWT {
    string sign_key = 1;
    string issuer = 2;
    google.protobuf.Duration expire = 4;
    // 免登录白名单
    repeated string white_list = 6;
    // 免rbac白名单
    repeated string rbac_white_list = 7;
  }

  HTTP http = 1;
  GRPC grpc = 2;
  string name = 3;
  map<string, string> metadata = 4;
  JWT jwt = 5;
}

message Data {
  // 主库, 用于维护系统配置、用户等
  pkg.conf.Database database = 1;
  // 业务数据库，多租户场景下的业务数据， 业务数据采用分表存储
  pkg.conf.Database bizDatabase = 2;
  // 缓存，支持多缓存方式
  pkg.conf.Cache cache = 3;
}